--- a/programa.html
+++ b/programa.html
@@ -7,9 +7,35 @@
 </head>
 <body>
     <script>
-        document.write('Meu nome é Vitor, minha idade é: ' + (2024 - 2009))
-        document.write('<br><br>')
-        document.write('O nome do meu colega é Isaque Crisostomo: ' +(2024 - 2008))
+
+
+function pulaLinha(){
+    document.write('<br><br>')
+}
+
+function mostra(texto){
+    document.write(texto)
+    pulaLinha()
+}
+
+
+
+ let ano = 2024
+ let minhaIdade = ano - 2009
+ let idadeIsaque = ano - 2008
+ let idadeJoão = ano - 2009
+
+        mostra('Meu nome é Vitor, minha idade é: ' + (2024 - 2009))
+        mostra('O nome do meu colega é Isaque Crisostomo: ' +(2024 - 2008))
+
+let media =(15 + 15 + 16)/3
+mostra('a média das idades é:'+(media))
+ano = 2080
+
+mostra('No ano de:'+(ano))
+mostra('O nome do meu amigo é João, ele tem:' +(ano - 2009))
+mostra('Minha idade sera:'+(ano - 2009))
+
     </script>
 </body>
 </html>
