--- a/programa3.html
+++ b/programa3.html
@@ -20,6 +20,8 @@ function mostra(texto){
 
 mostra('Número de pontos do meu time no Brasileirão ')
 
+let nomeTime = prompt('Qual o nome do seu time')
+
 let vitorias = prompt('Quantas vitorias o seu time obteve durante o campeonato?')
 
 let empates = prompt('Quantos empates seu time teve')
